Add convenience methods to the Tensor API.